fantaco-hr-recruiting/deployment/kubernetes/application/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fantaco-hr-recruiting-service
  labels:
    app: fantaco-hr-recruiting
spec:
  type: ClusterIP
  selector:
    app: fantaco-hr-recruiting
  ports:
  - name: http
    port: 8085
    targetPort: 8085
    protocol: TCP
